🐞 fix: change App-header avoiding content overflow
App-header now fixed at top 0

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -31,12 +31,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+
   position: fixed;
   z-index: -1;
+  top: 0;
+
+
   -moz-transform: scale(1.125);
   -webkit-transform: scale(1.125);
   -ms-transform: scale(1.125);
   transform: scale(1.125);
+
   -moz-transition: -moz-transform 0.325s ease-in-out, -moz-filter 0.325s ease-in-out;
   -webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
   -ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
